--- a/package.json
+++ b/package.json
@@ -11,8 +11,12 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.8",
+    "bcryptjs": "^3.0.2",
     "chart.js": "^4.4.3",
+    "jsonwebtoken": "^9.0.2",
     "jspdf": "^3.0.1",
+    "lodash": "^4.17.21",
+    "pg": "^8.16.0",
     "react": "^19.1.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^19.1.0",
